fix toast going behind sticky nav

--- a/client/assets/toast.css
+++ b/client/assets/toast.css
@@ -7,6 +7,7 @@
   border-radius: 6px;
   max-width: 60em;
   margin: 0 auto;
+  z-index: 1;
 
   color: #fff;
 }
